customer-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  labels:
    app: customer-service  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
      - name: customer-service
        image: yklee2002/customer-service
        imagePullPolicy: Always
        ports:
        - containerPort: 28092         
      imagePullSecrets:
         - name: spring-cloud-secret        
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  labels:
    app: customer-service  
spec:
  ports:
  - nodePort: 30002
    port: 28092
    protocol: TCP
    targetPort: 28092
  selector:
    app: customer-service
  type: NodePort
