discovery-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
  labels:
    app: discovery-service  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
      - name: discovery-service
        image: yklee2002/discovery-service
        imagePullPolicy: Always
        ports:
        - containerPort: 28096         
      imagePullSecrets:
         - name: spring-cloud-secret        
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  labels:
    app: discovery-service  
spec:
  ports:
  - nodePort: 30006
    port: 28096
    protocol: TCP
    targetPort: 28096
    name: http
  selector:
    app: discovery-service
  type: NodePort
