my-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - name: http
      nodePort: 30601 # 노드의 30001번 포트로 들어오면
      port: 28765 # 서비스의 80번 포트로 전달하고
      targetPort: 28765 # Pod의 80번 포트로 전달 30001(Node) -> 80(Service) -> 80(Pod)
      protocol: TCP
