second-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second
spec:
  replicas: 1
  selector:
    matchLabels:
      app: second
  template:
    metadata:
      labels:
        app: second
    spec:
      containers:
      - name: second
        image: yklee2002/second:latest
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: second-service
spec:
  selector:
    app: second
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8090
    nodePort: 30101
  type: NodePort
