zipkin-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-service
  labels:
    app: zipkin-service  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zipkin-service
  template:
    metadata:
      labels:
        app: zipkin-service
    spec:
      containers:
      - name: zipkin-service
        image: yklee2002/zipkin-service
        imagePullPolicy: Always
        ports:
        - containerPort: 28094         
      imagePullSecrets:
         - name: spring-cloud-secret        
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  labels:
    app: zipkin-service  
spec:
  ports:
  - nodePort: 30004
    port: 28094
    protocol: TCP
    targetPort: 28094
  selector:
    app: zipkin-service
  type: NodePort
