path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
spec:
  rules:
  - http:
      paths:
        - path: /account
          pathType: Prefix
          backend:
            service:
              name: account-service 
              port:
                number: 30001
        - path: /order
          pathType: Prefix
          backend:
            service:
              name: order-service 
              port:
                number: 30000
        - path: /customer
          pathType: Prefix
          backend:
            service:
              name: customer-service 
              port:
                number: 30002
        - path: /product
          pathType: Prefix
          backend:
            service:
              name: product-service 
              port:
                number: 30003
